서브모듈 업데이트, API 관련 다수의 작업, 폴더 구조 정리, 편의성 스크립트 추가 등
- .html 파일을 webpages 폴더로 이동
- working-scripts 폴더 추가 및 편의성 스크립트 추가
- 잘못 추가된 파일 삭제
- 콘서트 세션 종료 API 추가
- API 리스폰스 일관성 강화
- 리스폰스 코드 자동화 통계 스크립트 추가
- API 스펙 및 리스폰스 코드 통계 언리얼 프로젝트 복사 스크립트 추가

--- a/webpages/api-test.html
+++ b/webpages/api-test.html
@@ -1192,8 +1192,8 @@
                 try {
                     // 상대 경로인 경우 (로컬) - fetch로 blob 가져와서 재생
                     if (audioUrl.startsWith('/')) {
-                        const audioResponse = await fetch(`${getResourceServer()}${audioUrl}`, {
-                            headers: { 'Authorization': `Bearer ${token}` }
+                        const audioResponse = await fetch(`${getResourceServerUrl()}${audioUrl}`, {
+                            headers: { 'Authorization': `Bearer ${jwtToken}` }
                         });
                         const blob = await audioResponse.blob();
                         audioUrl = URL.createObjectURL(blob);
